--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -1,8 +1,8 @@
 <div class="top_submenu clearfix">
   <ul>
-    <li>Division:</li>
+    <li class="conference_column_first">Division:</li>
     <% [ 'I-A', 'I-AA' ].each do |div| %>
-        <li<%= ' class="active"' if session[:division] == div %>><%= link_to_if(session[:division] != div, div, change_div_path(div)) %></li>
+        <li<%= ' class="active"'.html_safe if session[:division] == div %>><%= link_to_if(session[:division] != div, div, change_div_path(div)) %></li>
     <% end %>
   </ul>
 </div>
