--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -3,7 +3,7 @@
     <p align="center"><%= image_tag("ajax-loader.gif") %></p>
   </div>
   <div class="title_wrapper clearfix">
-    <div class="cont_title"><h1>Edit <%= resource_name.to_s.humanize %></h1></div>
+    <div class="cont_title"><h1>Profile</h1></div>
   </div>
   <div class="column_wrapper clearfix sign_in-bg">
     <div class="left_column edit_profile_left_column">
