--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,28 @@
 <div class="content new_level with_submenu clearfix">
   <div class="content_title"><%= @user.username %> Posts</div>
+  <div class="content_stats clearfix">
+    <ul class="inner_menu">
+      <li>
+        <%= link_to "#{current_user.following.count} following", following_user_path(current_user) %>
+      </li>
+      <li>
+        <%= link_to pluralize(current_user.followers.count, "follower"), followers_user_path(current_user) %>
+      </li>
+    </ul>
+    <%= render 'shared/search' %>
+  </div>
+  <div class="content_stats clearfix">
+    <ul class="inner_menu">
+      <li>
+        <%= link_to "#{current_user.smacks.count} smacks", smacks_user_path(current_user) %>
+      </li>
+      <li>
+        <%= link_to "#{current_user.redemptions.count} redemptions", redemptions_user_path(current_user) %>
+      </li>
+    </ul>
+  </div>
   <div class="content_container">
     <div class="content_category">
-      <%= render 'shared/search' %>
-      <%= render 'shared/stats' %>
       <% unless @posts.blank? %>
           <%= will_paginate @posts %>
           <ul class="posts">
