--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -925,7 +925,7 @@ ul.news li {
 }
 
 .content_fb {
-    background: url(/images/content_fb.png) no-repeat !important;
+    background: url(/images/content_fb.png) no-repeat;
     width: 14px;
     height: 13px;
     float: left;
